@@ -17219,11 +17219,11 @@ package body Sem_Prag is
 
          begin
             --  Disable the support for pragma Refined_Pre as its static and
-            --  runtime semantics are still under heavy design.
+            --  runtime semantics are still under heavy design. The pragma is
+            --  silently ignored.
 
             if Pname = Name_Refined_Pre then
-               Error_Pragma ("pragma % is not supported");
-               return;
+               Set_Is_Ignored (N);
             end if;
 
             Analyze_Refined_Pragma (Spec_Id, Body_Id, Legal);
