@@ -1,3 +1,9 @@
+2013-10-17  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* sem_ch13.adb (Analyze_Aspect_Specifications): Flag aspect
+	Refined_Pre as not supported.
+	* sem_prag.adb (Analyze_Pragma): Ignore pragma Refined_Pre.
+
 2013-10-17  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_ch12.adb (Validated_Access_Subprogram_Instance): According
@@ -21,7 +27,7 @@
 	* sem_prag.adb (Analyze_Constituent): Move the check
 	concerning option Part_Of to routine Check_Matching_Constituent.
 	(Check_Matching_Constituent): Verify that an abstract state
-	that acts as a constituent has the prope Part_Op option in
+	that acts as a constituent has the proper Part_Of option in
 	its aspect/pragma Abstract_State.  Account for the case when a
 	constituent comes from a private child or private sibling.
 	* sem_util.ads, sem_util.adb (Is_Child_Or_Sibling): New routine.
